[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
num = "0.4.1"
ahash = "0.8.6"
cached = "0.46.1"
rayon = "1.8.0"
onig = { version = "6.4.0", default-features = false }

[profile.dev.package."*"]
opt-level = 3