[package]
name = "aoc2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
num = "0.4.1"
ahash = "0.8.6"
cached = "0.49.2"
rayon = "1.8.0"
clap = { version = "4.5.2", features = ["derive"] }
lazy_static = "1.4.0"
ranges = "0.3.3"

[profile.dev.package."*"]
opt-level = 3
